--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 <mat-toolbar color="primary"> 
     <mat-toolbar-row>
             <span class="title-center">
-        My single page application
+        <p id="title">Buddy Chat</p>
     </span>
       </mat-toolbar-row>
     
@@ -15,6 +15,7 @@
 
   <button mat-button [routerLink]="['/create']" color="Warn">Create</button>
   <button mat-button [routerLink]="['/list']">List</button>
+  <button mat-button [routerLink]="['/contactus']">Contact Us</button>
 </mat-toolbar-row>
  </mat-toolbar>
  
