--- a/src/app/post-create/post-create.component.html
+++ b/src/app/post-create/post-create.component.html
@@ -1,3 +1,10 @@
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="large"
+  color="#0000CD"
+  type="timer">
+ <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
 <mat-card>
   <form (submit)="onAddPost(postForm)" #postForm="ngForm">
     <mat-form-field>
