--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,18 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 #title{
+    width: 100%;
+    height: 300px;
+
     color: gold;
     font-size: 50px;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 1px solid red;
+
+}
+.mat-button{
+    text-align: center;
+    font-size: 30px;
 }
