--- a/src/app/post-details/post-details.component.html
+++ b/src/app/post-details/post-details.component.html
@@ -1,5 +1,11 @@
-
-<mat-toolbar color="primary">Posts List</mat-toolbar>
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="large"
+  color="#0000CD"
+  type="square-loader">
+ <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
+<mat-toolbar id='postList' >Posts List</mat-toolbar>
 <mat-accordion multi="true" *ngIf="posts.length > 0">
   <mat-expansion-panel [expanded]="true" *ngFor="let post of posts">
     <mat-expansion-panel-header>
@@ -7,7 +13,7 @@
     </mat-expansion-panel-header>
     <p>{{ post.content }}</p>
     <mat-action-row>
-      <button mat-button color="primary">EDIT</button>
+      <button mat-button (click)="onEdit(post._id)" color="primary">EDIT</button>
       <button mat-button (click)="onDelete(post._id)" color="warn">DELETE</button>
     </mat-action-row>
   </mat-expansion-panel>
